[package]
name = "solution"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"
regex = "1.11.1"
rustc-hash = "2.1.0"

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }

[profile.release]
codegen-units = 1
panic = "abort"
lto = true

[profile.dev.build-override]
opt-level = 3

[[bench]]
name = "bench"
harness = false
