[package]
name = "solution"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"
regex = "1.11.1"
rustc-hash = "2.1.0"
dary_heap = "0.3.7"
smallvec = "1.13.2"

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }
paste = "1.0.15"

[profile.release]
codegen-units = 1
panic = "abort"
lto = true

[profile.dev.build-override]
opt-level = 3

[[bench]]
name = "bench"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(day19_series)'] }
